--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot==21.10
-requests
-beautifulsoup4
-flask
+flask==2.3.3
+requests==2.31.0
+beautifulsoup4==4.12.2
+gunicorn==21.2.0
